plugins {
    alias(libs.plugins.android.library)
    alias(libs.plugins.maven.publish)
}

android {
    namespace 'com.v7878.foreign'

    defaultConfig {
        consumerProguardFiles "consumer-rules.pro"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }

    publishing {
        singleVariant('release') {
            withSourcesJar()
        }
    }
}

dependencies {
    compileOnly project(':stub_llvm')
    api project(':VarHandleApi')

    implementation project(':AndroidUnsafe')

    implementation libs.sun.cleanerstub
    implementation libs.r8.annotations
    implementation libs.androidmisc
    implementation libs.dexfile
}

publishing {
    publications {
        release(MavenPublication) {
            groupId project.group
            artifactId project.name
            version project.version
            afterEvaluate {
                from components.release
            }
        }
    }
}